# graph-hook-library

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pyproject.toml  run-clang-format.py  vf3_patch.patch
.github/workflows/: codeql.yml  docs.yml  license_headers.yml  lint_black.yml  lint_clang.yml
cmake/: CPM.cmake
docs/: Doxyfile  conf.py  cpp_api.rst  index.rst
examples/: 01_graph.cpp  02_isomorphism.cpp  03_subgraph.cpp  04_insert_hub.cpp  CMakeLists.txt  city.h  map_graph.h
examples/standalone_project/: 02_isomorphism.cpp  CMakeLists.txt  README.md  city.h  map_graph.h  vf3.patch
include/ghl/: ghl.h  ghl_isomorphisms.h  ghl_subgraphs.h
include/ghl/bindings/: graph_bindings.cpp  graph_bindings.h
include/ghl/cereal/: cereal.h  forward_decl.h  pybind11.cpp  pybind11.h
include/ghl/graph/: base_node.h  graph.h  primitive_edge.h  pybind11_fwd_decl.h  subgraph.h
include/ghl/isomorphism/: apply_isomorphism.h  graph_isomorphisms.h
include/ghl/serialization/: graph_serialization.h
python_project/graph_hook_library/: __init__.py
tests/cpp/: test_graph.cpp  test_isomorphisms.cpp  test_serialization.cpp  test_subgraphs.cpp  test_vf3_isomorphisms.cpp
tests/python/: test_bindings.py
